<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/button_call_ljy_rm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rm"
        android:height="150dp"
        android:textSize="50dp"/>
    <Button
        android:id="@+id/button_call_ljy_mi4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mi4"
        android:height="150dp"
        android:textSize="50dp"/>
    <Button
        android:id="@+id/button_activity_ljy_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/back"
        android:shadowColor="@android:color/white"/>
</LinearLayout>
