<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/button_call_yh_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="150dp"
        android:textSize="50dp"
        android:text="@string/phone"
        />

    <Button
        android:id="@+id/button_call_yh_zuoji"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="150dp"
        android:textSize="50dp"
        android:text="@string/zuoji"
        />
    <Button
        android:id="@+id/button_activity_yh_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/back"
        android:shadowColor="@android:color/white"/>


</LinearLayout>
