<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="top.zsh2401.f5calltools.MainActivity">

    <LinearLayout
        android:id="@+id/line_0"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_weight="1.0"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/zsh"
            android:drawableTop="@mipmap/ic_launcher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_weight="1"
            android:text="@string/zsh"
            android:textSize="35dp"
            android:gravity="center"
              />
        <TextView
            android:id="@+id/my"
            android:drawableTop="@mipmap/ic_launcher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/my"
            android:textSize="35dp"
            android:gravity="center"
             />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line_1"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_weight="1.0"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/ljy"
            android:drawableTop="@mipmap/ic_launcher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_weight="1"
            android:text="@string/ljy"
            android:textSize="35dp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/hxy"
            android:drawableTop="@mipmap/ic_launcher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="@string/hxy"
            android:textSize="35dp"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/line_2"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_weight="1.0"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/yh"
            android:layout_width="109dp"
            android:layout_height="146dp"
            android:layout_weight="0.25"
            android:clickable="true"
            android:drawableTop="@mipmap/ic_launcher"
            android:gravity="center"
            android:text="@string/yh"
            android:textSize="35dp" />

        <TextView
            android:id="@+id/main_exit"
            android:drawableTop="@mipmap/ic_launcher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_weight="1"
            android:text="@string/exit"
            android:textSize="35dp"
            android:gravity="center"
            />
    </LinearLayout>


</LinearLayout>
